<resources>
    <string name="app_name">IslamicInfo</string>
    <string name="package_name">com.example.islamicinfoapp</string>
    <string name="home">Home</string>
    <string name="zikr">Zikr</string>
    <string name="quran">Quran</string>
    <string name="pregnancy_info">P-Info</string>
    <string name="more">More</string>
    <string name="home_title">Prayer Times</string>
    <string name="preg_title">Pregnancy Related Information</string>
    <string name="duas_title">Duas</string>
    <string name="surah_title">Surahs to be read during Pregnancy</string>
    <string name="do_title">Do\'s During Pregnancy</string>
    <string name="dont_title">Don\'t during Pregnancy</string>
    <string name="more_preg_title">More Info About Pregnancy</string>
    <string name="more_title">More from the app</string>
    <string name="calendar_title">Islamic Calendar</string>
    <string name="settings_title">App Settings</string>
    <string name="help_title">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duas_url">http://duas.org/Matrimony/pregnancy_safety.htm</string>
    <string name="arrow_image">arrow image</string>
    <string name="item_text">item text</string>
    <string name="image_desc">image desc</string>
    <string name="version_data">1.1.0</string>
    <string name="feedback_dialog_title">Help us to improve your experience</string>
    <string name="feedback_dialog_message">Please tell us the improvisation neeeded by sharing your valuable feedback</string>
    <string name="feedback_positive_text">Send Feedback</string>
    <string name="feedback_negative_text">Later</string>
    <string name="feedback_email">rahathzamar92@gmail.com</string>
    <string name="help_text">Describe your query</string>
    <string name="contact_button_text">SEND</string>
    <string name="help_title_text">How can we help you ?</string>
    <string name="activity_not_found_text">as there is no app to handle this</string>
    <string name="feedback_app_not_found">This feedback cannot be sent</string>
    <string name="help_app_not_found">This query cannot be sent</string>
    <string name="english_translation">English Translation</string>
    <string name="duaName">duas</string>
    <string name="dua_excluded">قَالَ هَلْ آمَنُكُمْ عَلَيْهِ إِلَّا كَمَا أَمِنْتُكُمْ عَلَىٰ أَخِيهِ مِنْ قَبْلُ </string>
    <string name="circle_text">1</string>
    <string name="before_anything">بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم </string>
    <string name="darood">
اَللّٰھُمَّ صَلِّ عَلٰی مُحَمَّدٍ وَّعَلٰٓی اٰلِ مُحَمَّدٍ کَمَا صَلَّیْتَ عَلٰٓی اِبْرَاھِیْمَ وَعَلٰٓی اٰلِ اِبْرَاھِیْمَ اِنَّکَ حَمِیْدٌ مَّجِیْدٌ اَللّٰھُمَّ بَارِکْ عَلٰی مُحَمَّدٍ وَّعَلٰٓی اٰلِ مُحَمَّدٍ کَمَا بَارَکْتَ عَلٰٓی اِبْرَاھِیْمَ وَعَلٰٓی اٰلِ اِبْرَاھِیْمَ اِنَّکَ حَمِیْدٌ مَّجِیْدٌ</string>
    <string name="subhanallah">سبحان الله</string>
    <string name="alhamdulillah">ٱلْحَمْدُ لِلّٰ</string>
    <string name="allahu_akbar">الله أكبر</string>
    <string name="three_times">33 times</string>
    <string name="four_times">34 times</string>
    <string name="ayat">ayat-ul-kursi</string>
    <string name="zikr_frag_name">zikr</string>
    <string name="preg_frag_name">preg</string>
    <string name="location_text">Fetch My Current Location</string>
    <string name="dua_surah_base_url">https://api.quran.com/api/v4/quran/verses/</string>
<!--    <string name="dua_surah_base_url">https://api.alquran.cloud/v1/</string>-->
    <string name="prayer_times_base_url">https://api.aladhan.com/v1/</string>
    <string name="prayer_time_calculation_method">4</string>
    <string name="prayer_time">05:01 AM</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_internet_message">You are offline.Please check your internet connection</string>
    <string name="ok_button_text">OK</string>
    <string name="location_perm_denied">Permission Denied</string>
    <string name="loc_explanation_message">Without this permission, the app is unable to provide the prayer timing for the specified location.</string>
    <string name="retry">RE-TRY</string>
    <string name="default_city">Mecca</string>
    <string name="loc_permission">Location Permission</string>
    <string name="default_country">Saudi Arabia</string>
    <string name="dont_ask_again">dont ask again</string>
    <string name="min_text_length_surah">67</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="reminder">ReminderImage</string>
    <string name="cityname">cityname</string>
    <string name="countryname">countryname</string>
    <string name="today">Today</string>
    <string name="location_dialog_title">Location Setting</string>
    <string name="location_alert_message">Please verify whether you have enabled location settings</string>
    <string name="surah_total_count">30</string>
    <string name="notif_channel_name">Prayer Timing Channel</string>
    <string name="notif_channel_desc">This is prayer timing notification channel</string>
    <string name="fajr_title_notif">Wake up!! It is fajr time in </string>
    <string name="sunrise_title_notif">Sunrise in </string>
    <string name="dhuhr_title_notif">Dhuhr time in </string>
    <string name="asr_title_notif">Asr time in </string>
    <string name="maghrib_title_notif">Maghrib time in </string>
    <string name="isha_title_notif">Isha time in </string>
    <string name="fajr_desc">Let your first conversation be with Allah</string>
    <string name="sunrise_desc">Offer two rakah Salatul Ishraq to earn good rewards from Allah</string>
    <string name="dhuhr_desc">Offer zuhr namaz for blessed wealth</string>
    <string name="asr_desc">Offer Asr prayer and earn ticket to Jannah</string>
    <string name="maghrib_desc">Time is short.Pray soon.Offer maghrib namaz to have successful children</string>
    <string name="isha_desc">Take this oppurtunity to thank Allah for all your blessings and to ask for forgiveness</string>
    <string name="namazName">namazName</string>
    <string name="namazTime">namazTime</string>
    <string name="namazTimeData">05:30 AM</string>
    <string name="close">Close</string>
    <string name="dialogTitle">dialog_title</string>
    <string name="dialogdesc">dialog_desc</string>
    <string name="after">after</string>
    <string name="before">before</string>
    <string name="equals">equals</string>
    <string name="new_location">new_location</string>
    <string name="app_name_splash">Islamic Info</string>
    <string name="loc_not_found">Current location could not be fetched.Hence,displaying the prayer timing of Holy City Mecca</string>
    <string name="no_data_available">Prayer timing currently not available for the selected city</string>
    <string name="gallery">Gallery</string>
    <string name="app_info">App Info</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback_title">Send Feedback</string>
    <string name="loading_location_details">Fetching your location details\.\.\.</string>
    <string name="toast_message_mecca">Prayertiming details could not be fetched for your current location due to some reasons.
        Hence,providing prayertiming details for our holy city Mecca</string>
    <string name="send_query_text">Send Query</string>

    <string-array name="preg_info_item_name">
        <item>Duas</item>
        <item>Surahs</item>
        <item>Do</item>
        <item>Dont</item>
        <item>Important Facts</item>
        <item>Gallery</item>
    </string-array>

    <string-array name="more_item_name">
        <item>Islamic Calendar</item>
        <item>App Settings</item>
        <item>Help</item>
    </string-array>

    <string-array name="help_item_name">
        <item>Contact Us For Help</item>
        <item>Send Feedback</item>
        <item>App Info</item>
    </string-array>

    <string-array name="duas_title">
        <item> For the safety of child and mother during pregnancy</item>
        <item>To remain safe from the danger of miscarriage or premature birth</item>
        <item>For the safety of child and mother during pregnancy and no miscarriage</item>
    </string-array>

    <string-array name="surahs_after_prayer">
        <item>Fajr : Surah Yaseen</item>
        <item>Zuhr : Surah Al-Fath</item>
        <item>Asr : Surah An-Naba</item>
        <item>Magrib : Surah Al-Waaqia</item>
        <item>Isha : Surah Al-Mulk</item>
    </string-array>

    <string-array name="qul_surahs">
        <item>Surah Al-Ikhlaas</item>
        <item>Surah An-Naas</item>
        <item>Surah Al-Falaq</item>
        <item>Surah Al-Kaafiroon</item>
    </string-array>

    <string-array name="dua_title">
        <item>Treasure of Paradise</item>
        <item>Protection from Fire</item>
        <item>Most Beloved words to Allaah</item>
        <item>Ayate Karima</item>
        <item>There is no God but Allah</item>
        <item>Seek the forgiveness of Allah</item>
        <item>To ward away evils</item>
        <item>Sins committed during the day will be pardoned</item>
    </string-array>

    <string-array name="everyday_duas">
        <item>لَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللَّهِ</item>
        <item>اللَّهُمَّ إِنِّي أَسْأَلُكَ الْجَنَّةَ وَأَعُوذُ بِكَ مِنَ النَّارِ</item>
        <item>سُبْحَانَ اللَّهِ وَالْحَمْدُ لِلَّهِ وَلاَ إِلَهَ إِلاَّ اللَّهُ وَاللَّهُ أَكْبَرُُ</item>
        <item>لاَ إِلَهَ إِلَّا أنْـت سُـبْحانَكَ إِنِّي كُنْـتُ مِنَ الظّـالِميـن</item>
        <item>لا إله إلا الله محمد رسول الله</item>
        <item>أَسْتَغْفِرُ اللّٰهَ</item>
        <item>سُبْحَانَ اللَّهِ وَالْحَمْدُ لِلَّهِ وَلاَ إِلَهَ إِلاَّ اللَّهُ وَاللَّهُ أَكْبَرُ وَلاَ حَوْلَ وَلاَ قُوَّةَ إِلاَّ بِاللَّهِ</item>
        <item>
لاَ إِلَهَ إِلاَّ اللَّهُ، وَحْدَهُ لاَ شَرِيكَ لَهُ، لَهُ الْمُلْكُ، وَلَهُ الْحَمْدُ، وَهْوَ عَلَى كُلِّ شَىْءٍ قَدِيرٌ</item>
    </string-array>

    <string-array name="zikr_item_names">
        <item>Darood-e-Ibraheemi</item>
        <item>After prayer tasbeeh</item>
        <item>Dua before starting anything</item>
        <item>Ayat-ul-Kursi</item>
        <item>Eveyday duas</item>
        <item>Protection from Negativity</item>
        <item>After prayer Surahs</item>
    </string-array>

    <!--    <string-array name="zikr_listview_item_names">-->
    <!--        <item>Protection from Negativity</item>-->
    <!--        <item>After prayer Surahs</item>-->
    <!--    </string-array>-->
</resources>
