<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top_bottom"
        android:text="@string/fajr_title_notif"
        android:textAlignment="center"
        android:textSize="@dimen/padding_switch_top_bottom"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_marginTop="@dimen/padding_top_bottom"
        android:id="@+id/dialog_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_quran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <TextView
        android:layout_marginTop="@dimen/padding_top_bottom"
        android:id="@+id/dialog_time_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prayer_time"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_image" />

    <TextView
        android:layout_marginTop="@dimen/padding_top_bottom"
        android:id="@+id/dialog_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/isha_desc"
        android:textAlignment="center"
        android:textSize="@dimen/padding_left_right"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_time_text" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/close"
        android:layout_marginTop="@dimen/padding_help_top_bottom"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="@dimen/padding_left_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>