<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.HomeFragment"
        android:label="@string/home_title" />

    <fragment
        android:id="@+id/zikrFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.ZikrFragment"
        android:label="@string/zikr"
        tools:layout="@layout/fragment_zikr">
        <action
            android:id="@+id/action_zikrFragment_to_surahItemFragment"
            app:destination="@id/surahItemFragment"
            app:popUpTo="@id/zikrFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_zikrFragment_to_zikrItemFragment"
            app:destination="@id/zikrItemFragment"
            app:popUpTo="@id/zikrFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_zikrFragment_to_zikrDuaFragment"
            app:destination="@id/zikrDuaFragment"
            app:popUpTo="@id/zikrFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/pregInfoFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.PregInfoFragment"
        android:label="@string/preg_title"
        tools:layout="@layout/fragment_preg_info" >
        <!--        <action-->
        <!--            android:id="@+id/action_pregInfoFragment_to_navigation"-->
        <!--            app:destination="@id/navigation" />-->
        <!--        <action-->
        <!--            android:id="@+id/action_pregInfoFragment_to_moreFragment2"-->
        <!--            app:destination="@id/moreFragment"-->
        <!--            app:popUpTo="@id/homeFragment"/>-->
        <action
            android:id="@+id/action_pregInfoFragment_to_duasFragment"
            app:destination="@id/duasFragment"
            app:popUpTo="@id/pregInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_pregInfoFragment_to_surahsFragment"
            app:destination="@id/surahsFragment"
            app:popUpTo="@id/pregInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_pregInfoFragment_to_doFragment"
            app:destination="@id/doFragment"
            app:popUpTo="@id/pregInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_pregInfoFragment_to_dontFragment"
            app:destination="@id/dontFragment"
            app:popUpTo="@id/pregInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_pregInfoFragment_to_impPregFactsFragment"
            app:destination="@id/impPregFactsFragment"
            app:popUpTo="@id/pregInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_pregInfoFragment_to_galleryFragment"
            app:destination="@id/galleryFragment"
            app:popUpTo="@id/pregInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <!--        <action-->
        <!--            android:id="@+id/action_pregInfoFragment_to_moreFragment"-->
        <!--            app:destination="@id/moreFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/duasFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.DuasFragment"
        android:label="@string/duas_title"
        tools:layout="@layout/fragment_duas" >
        <!--        <argument android:name="calling_frag_name"-->
        <!--            app:argType="string">-->
        <!--        </argument>-->
        <!--        <action-->
        <!--            android:id="@+id/action_duasFragment_to_pregInfoFragment"-->
        <!--            app:destination="@id/pregInfoFragment"/>-->
    </fragment>
    <fragment
        android:id="@+id/surahsFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.SurahsFragment"
        android:label="@string/surah_title"
        tools:layout="@layout/fragment_surahs" >
        <!--        <action-->
        <!--            android:id="@+id/action_surahsFragment_to_pregInfoFragment"-->
        <!--            app:destination="@id/pregInfoFragment" />-->
        <action
            android:id="@+id/action_surahsFragment_to_surahItemFragment"
            app:destination="@id/surahItemFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>
    <fragment
        android:id="@+id/doFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.DoFragment"
        android:label="@string/do_title"
        tools:layout="@layout/fragment_do" >
        <!--        <action-->
        <!--            android:id="@+id/action_doFragment_to_pregInfoFragment"-->
        <!--            app:destination="@id/pregInfoFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/dontFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.DontFragment"
        android:label="@string/dont_title"
        tools:layout="@layout/fragment_dont" >
        <!--        <action-->
        <!--            android:id="@+id/action_dontFragment_to_pregInfoFragment"-->
        <!--            app:destination="@id/pregInfoFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/impPregFactsFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.ImpPregFactsFragment"
        android:label="@string/more_preg_title"
        tools:layout="@layout/fragment_imp_preg_facts" >
        <!--        <action-->
        <!--            android:id="@+id/action_impPregFactsFragment_to_pregInfoFragment"-->
        <!--            app:destination="@id/pregInfoFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.HelpFragment"
        android:label="@string/help_title"
        tools:layout="@layout/fragment_help" >
        <action
            android:id="@+id/action_helpFragment_to_contactUsFragment"
            app:destination="@id/contactUsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_helpFragment_to_feedbackFragment"
            app:destination="@id/feedbackFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_helpFragment_to_appInfoFragment"
            app:destination="@id/appInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/appInfoFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.AppInfoFragment"
        android:label="@string/app_info"
        tools:layout="@layout/fragment_app_info" />
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.FeedbackFragment"
        android:label="@string/feedback_title"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/surahItemFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.SurahItemFragment"
        tools:layout="@layout/fragment_surah_item"
        android:label="Surah {surahname}">
        <argument
            android:name="surahname"
            app:argType="string"
            />
    </fragment>
    <fragment
        android:id="@+id/zikrItemFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.ZikrItemFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_zikr_item" >
        <argument
            app:argType="string"
            android:name="title"/>
        <argument
            app:argType="string"
            android:name="zikrText"/>
    </fragment>
    <fragment
        android:id="@+id/zikrDuaFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.ZikrDuaFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_zikr_dua">
        <argument android:name="title"
            app:argType="string"
            />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.example.islamicinfoapp.src.main.java.com.view.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />
    <!--    <dialog-->
    <!--        android:id="@+id/notifDialogFragment"-->
    <!--        android:name="com.example.islamicinfoapp.src.main.java.com.view.NotifDialogFragment"-->
    <!--        android:label="fragment_notif_dialog"-->
    <!--        tools:layout="@layout/fragment_notif_dialog">-->
    <!--        <arguments/>-->
    <!--    </dialog>-->

    <!--    <navigation-->
    <!--        android:id="@+id/navigation"-->
    <!--        app:startDestination="@id/duasFragment" >-->
    <!--        <fragment-->
    <!--            android:id="@+id/duasFragment"-->
    <!--            android:name="com.example.islamicinfoapp.src.main.java.com.View.DuasFragment"-->
    <!--            android:label="Duas"-->
    <!--            tools:layout="@layout/fragment_duas" />-->
    <!--        <fragment-->
    <!--            android:id="@+id/surahsFragment"-->
    <!--            android:name="com.example.islamicinfoapp.src.main.java.com.View.SurahsFragment"-->
    <!--            android:label="Surahs"-->
    <!--            tools:layout="@layout/fragment_surahs" />-->
    <!--        <fragment-->
    <!--            android:id="@+id/doFragment"-->
    <!--            android:name="com.example.islamicinfoapp.src.main.java.com.View.DoFragment"-->
    <!--            android:label="Do's"-->
    <!--            tools:layout="@layout/fragment_do" />-->
    <!--        <fragment-->
    <!--            android:id="@+id/dontFragment"-->
    <!--            android:name="com.example.islamicinfoapp.src.main.java.com.View.DontFragment"-->
    <!--            android:label="Don't"-->
    <!--            tools:layout="@layout/fragment_dont" />-->
    <!--        <fragment-->
    <!--            android:id="@+id/impPregFactsFragment"-->
    <!--            android:name="com.example.islamicinfoapp.src.main.java.com.View.ImpPregFactsFragment"-->
    <!--            android:label="Imp Facts"-->
    <!--            tools:layout="@layout/fragment_imp_preg_facts" />-->
    <!--        <action-->
    <!--            android:id="@+id/action_global_pregInfoFragment"-->
    <!--            app:destination="@id/pregInfoFragment" />-->
    <!--    </navigation>-->
</navigation>